apps/adguardhome/bluey/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: adguard
  namespace: adguard
spec:
  ingressClassName: nginx
  rules:
    - host: adguard.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  name: web
